<resources>
    <string name="app_name">Login and registration with fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="HomeFragment">Welcome to the home screen</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="sign_in">Sign in</string>
    <string name="Register">New user Registration</string>
    <string name="Email">Enter Email</string>
    <string name="setPassword">Create Password</string>
    <string name="FName">Enter your fiest name</string>
    <string name="LName">Enter your last name</string>
    <string name="createUsername">Create user name</string>
    <string name="confirmPassword">confirm Password</string>
    <string name="tvLogin">Already have an account click here for login !</string>
    <string name="Welcometxt">Welcome to the world of Android</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="resetPassword">Reset Password</string>
    <string name="resetPasswordText">Enter your registered Email and we will send you email to reset password</string>
    <string name="resetPasswordHint">Enter Email</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="nav_Title">Custom tool bar</string>
    <string name="order_UserInfo">user Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Dialog Fragment -->
    <string name="save_profileImg">click!! to save selected profile photo</string>


    <!-- toolbar title -->
    <string name="archive_title">Archived notes</string>
    <string name="home_title">Fun Do</string>




</resources>