<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_fragment"
    tools:context="com.example.FunDoNotes.view.RegisterFragment">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_send_to_mobile_24"
        android:drawablePadding="15dp"
        android:hint="@string/Email"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:layout_below="@id/etEmail"
        android:background="#30ffffff"
        android:hint="@string/FName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/lasttname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstname"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/LName"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

<!--    <EditText-->
<!--        android:id="@+id/createUsername"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/lasttname"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="#30ffffff"-->
<!--        android:drawableStart="@drawable/ic_baseline_info_24"-->
<!--        android:drawablePadding="20dp"-->
<!--        android:hint="@string/createUsername"-->
<!--        android:inputType="textPassword"-->
<!--        android:padding="15dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/white" />-->


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setpassword"
        android:layout_below="@id/lasttname"
        android:background="#30ffffff"
        android:hint="@string/setPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:layout_below="@id/setpassword"
        android:background="#30ffffff"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerBtn"
        android:text="REGISTER"
        android:layout_below="@id/confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/design_default_color_secondary"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/tvLogin"
        android:textColor="@color/white" />




</RelativeLayout>