<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.FunDoNotes.view.ResetPasswordFragment">


    <TextView
        android:id="@+id/tvResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/resetPassword"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvResetPassHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResetPass"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/resetPasswordText"
        android:textColor="@color/resetPasswordText" />

    <EditText
        android:id="@+id/etRegisteredEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResetPassHint"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="20dp"
        android:layout_margin="15dp"
        android:background="#30ffffff"
        android:hint="@string/resetPasswordHint"
        android:padding="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetBtn"
        android:layout_below="@id/etRegisteredEmail"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="Reset" />

</RelativeLayout>